--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server/app.js",
     "build": "next build",
-    "start": "NODE_DEV=production node server/app.js"
+    "start": "NODE_ENV=production node server/app.js"
   },
   "keywords": [],
   "author": "",
